bk_ida/gccida/g1/peephole2_insns
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59365:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59368:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v84.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59424:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_peephole2_1277( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59467:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1278( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59473:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_peephole2_1279( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59521:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_peephole2_1274( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59568:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_peephole2_1273( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59650:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_peephole2_1292( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59693:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1293( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59699:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_peephole2_1294( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59747:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_peephole2_1289( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59794:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_peephole2_1288( insn, recog_data_0.operand); 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59860:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[6] = v97; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59880:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[4] = v102; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59888:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[5] = v104; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59905:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v107; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59932:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v114; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59940:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v116; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/insn-recog.c:59950:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v118; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_insns/src/obj/insn-recog.o] Error 1
